<resources>

    <string name="app_name">IncheonAriport</string>

    <string name="preparing">준비중</string>

    <string name="update_time">업데이트 시간: %s</string>

    <string name="toolbar_congestion_title">출국장 혼잡도</string>

    <string name="toolbar_my_plane_title">내 비행기 정보</string>

    <string name="toolbar_detail_info_title">비행기 정보</string>

    <string name="gate_no">%s 출국장</string>

    <string name="gate_notice">%s 출국장 예상 혼잡도</string>

    <string name="hint_search_airplane_short">항공편을 입력하세요.</string>

    <string name="hint_search_airplane">항공편을 검색해 주세요. \n EX) "OZ6617"</string>
    <string name="hint_short_query">글자가 너무 짧습니다. \n (2글자 이상)</string>
    <string name="hint_no_response">%s의 검색 결과가 없습니다.</string>

    <string name="airline_title">항공사 / 항공편명</string>
    <string name="flight_id_title">항공편명</string>
    <string name="schedule_title">출발시간</string>
    <string name="destination_title">도착지</string>

    <string name="menu_title_home">홈</string>
    <string name="menu_title_congestion">혼잡도</string>
    <string name="menu_title_myplane">내 비행기</string>
    <string name="menu_title_settings">설정</string>

    <string name="flight_register_info">현재 비행기를 내 비행기로 등록하시면, 경로 추천 및 알람 기능을 이용하실 수 있습니다.</string>
    <string name="flight_register">내 비행기로 등록</string>
    <string name="check_in_title">체크인카운터</string>
    <string name="boarding_gate_title">탑승구</string>
    <string name="take_off_time_title">출발시간</string>

    <string name="departure_airport">인천</string>
    <string name="departure_airport_code">ICN</string>
    <string name="departure_terminal">(제 1여객터미널)</string>

    <string name="not_register_flight">내 비행기로 등록된 비행기가 없습니다.</string>
</resources>
