<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="ado.sabgil.incheonariport.data.model.SimpleFlightInfo" />

        <import type="java.util.List" />

        <variable
            name="items"
            type="List&lt;SimpleFlightInfo&gt;" />
    </data>

    <FrameLayout
        android:id="@+id/fl_screen_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/tb_search"
                style="@style/tb"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="4dp"
                    android:layout_marginBottom="4dp"
                    android:background="@drawable/border"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/iv_back_button"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:paddingStart="4dp"
                        android:paddingEnd="4dp"
                        android:src="@drawable/ic_arrow_back"
                        android:tint="@color/colorPrimary" />

                    <EditText
                        android:id="@+id/et_search"
                        style="@style/et"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginStart="4dp"
                        android:layout_marginEnd="4dp"
                        android:layout_weight="1"
                        android:hint="@string/hint_search_airplane_short"
                        android:importantForAutofill="no"
                        android:inputType="text"
                        android:maxLines="1"
                        tools:targetApi="o" />

                    <ImageView
                        android:id="@+id/iv_clear"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:paddingStart="4dp"
                        android:paddingEnd="4dp"
                        android:src="@drawable/ic_clear"
                        android:tint="@color/colorPrimary"
                        android:visibility="invisible" />
                </LinearLayout>
            </androidx.appcompat.widget.Toolbar>

            <FrameLayout
                android:id="@+id/fl_list_container"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tb_search">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/ly_list_screen"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv_searched_item"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/colorWhite"
                        app:adapter="@{items}"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/ly_short_text_screen"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/colorWhite">

                    <TextView
                        style="@style/text_bold_24"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="24dp"
                        android:gravity="center"
                        android:text="@string/hint_short_query"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/ly_no_data_screen"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/colorWhite">

                    <!-- TODO text에 검색어도 표현해주도록 변경하자.-->
                    <TextView
                        style="@style/text_bold_24"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="24dp"
                        android:gravity="center"
                        android:text="@string/hint_no_response"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/ly_default_screen"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/colorWhite">

                    <TextView
                        style="@style/text_bold_24"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="24dp"
                        android:gravity="center"
                        android:text="@string/hint_search_airplane"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </FrameLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>

</layout>